--- a/Data_Engineer/FastAPI/4Dummies.ipynb
+++ b/Data_Engineer/FastAPI/4Dummies.ipynb
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> pip install fastapi uvicorn"
+    "!pip install fastapi uvicorn"
    ]
   },
   {
@@ -432,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.11.6"
   },
   "orig_nbformat": 4
  },
